Add beneficiary module

--- a/Move.toml
+++ b/Move.toml
@@ -9,3 +9,4 @@ Sui = { local = "../sui/crates/sui-framework" }
 [addresses]
 swap =  "0x0"
 controller = "0x6c5e9e3f8fa9fdbf6a0dde72ec11a297b928a852"
+beneficiary = "0x6c5e9e3f8fa9fdbf6a0dde72ec11a297b928a852"
