--- a/Move.toml
+++ b/Move.toml
@@ -8,5 +8,6 @@ Sui = { local = "../sui/crates/sui-framework" }
 
 [addresses]
 swap = "0x0"
+# TODO: replace controller and beneficiary on mainnet
 controller = "0x82d770bab2d607b919f2dcc45a7491ede65fe6db"
 beneficiary = "0x82d770bab2d607b919f2dcc45a7491ede65fe6db"
