--- a/test_coins/Move.toml
+++ b/test_coins/Move.toml
@@ -5,3 +5,6 @@ version = "1.0.0"
 [dependencies]
 #Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
 Sui = { local = "../../sui/crates/sui-framework" }
+
+[addresses]
+test = "0x0"
