Fix faucet and redeploy on sui devnet 0.18

--- a/Move.toml
+++ b/Move.toml
@@ -7,7 +7,9 @@ version = "1.0.0"
 Sui = { local = "../sui/crates/sui-framework" }
 
 [addresses]
+# TODO: replace real address for test_coin
 swap = "0x0"
+
 # TODO: replace controller and beneficiary on mainnet
 controller = "0x82d770bab2d607b919f2dcc45a7491ede65fe6db"
 beneficiary = "0x82d770bab2d607b919f2dcc45a7491ede65fe6db"
