--- a/test_coins/Move.toml
+++ b/test_coins/Move.toml
@@ -3,8 +3,8 @@ name = "test-coins"
 version = "1.0.0"
 
 [dependencies]
-#Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
-Sui = { local = "../../sui/crates/sui-framework" }
+#Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "devnet" }
+Sui = { local = "../../sui/crates/sui-framework/packages/sui-framework" }
 swap = { local = "../" }
 
 [addresses]
