--- a/Move.toml
+++ b/Move.toml
@@ -2,9 +2,10 @@
 name = "swap"
 version = "1.0.0"
 
-[dependencies]
-#Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "devnet" }
-Sui = { local = "../sui/crates/sui-framework/packages/sui-framework" }
+[dependencies.Sui]
+git = "https://github.com/MystenLabs/sui.git"
+subdir = "crates/sui-framework/packages/sui-framework"
+rev = "a63f425b9999c7fdfe483598720a9effc0acdc9e"
 
 [addresses]
 # Note: replace real swap address for test_coins
